--- a/WIS_Sprint0/build2024.gradle
+++ b/WIS_Sprint0/build2024.gradle
@@ -147,7 +147,7 @@ eclipse {
 
 application {
     //Define the main class for the application.
-    mainClassName    = 'it.unibo.ctx_wis.MainCtx_wisKt'
+    mainClassName    = 'it.unibo.ctx_monitoringdev.MainCtx_monitoringdevKt'
 }
  
  jar {
@@ -183,7 +183,7 @@ task run0(type: JavaExec) {
     group = "Execution"
     description = "Run the main class with JavaExecTask"
     classpath = sourceSets.main.runtimeClasspath
-    main = 'it.unibo.ctx_wis.MainCtx_wisKt'
+    main = 'it.unibo.ctx_monitoringdev.MainCtx_monitoringdevKt'
 }
 
 /*
