--- a/WIS_Sprint1/.settings/org.eclipse.jdt.core.prefs
+++ b/WIS_Sprint1/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,5 @@
-#
-#Fri Aug 23 14:44:30 CEST 2024
 eclipse.preferences.version=1
+org.eclipse.jdt.core.builder.resourceCopyExclusionFilter=*.kt
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.methodParameters=do not generate
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=11
