added monitoring_device.properties, started fixing wis interface, TODO: check sprint2.qak, add wis_system.properties, test sprint2 with monitoring_device

--- a/MD_Sprint2/build.gradle
+++ b/MD_Sprint2/build.gradle
@@ -175,6 +175,9 @@ distributions {
         	 into('bin'){
         	 	from 'raspberry_scripts'
         	 } 
+        	 into('bin'){
+        	 	from 'monitoring_device.properties'
+        	 }
              from './monitoring_device.pl'
              from './sysRules.pl'
              from './facadeConfig.json'
