--- a/WIS_Sprint1/.settings/org.eclipse.buildship.core.prefs
+++ b/WIS_Sprint1/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script /home/alessio/.config/Code/User/globalStorage/redhat.java/1.35.1/config_linux/org.eclipse.osgi/57/0/.cp/gradle/init/init.gradle --init-script /home/alessio/.config/Code/User/globalStorage/redhat.java/1.35.1/config_linux/org.eclipse.osgi/57/0/.cp/gradle/protobuf/init.gradle
+arguments=--init-script /home/alessio/.config/Code/User/globalStorage/redhat.java/1.36.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/init/init.gradle --init-script /home/alessio/.config/Code/User/globalStorage/redhat.java/1.36.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/protobuf/init.gradle
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/usr/lib/jvm/java-22-openjdk-amd64
+java.home=/mnt/hdd/alessio/Programs/sdkman/candidates/java/11.0.21-amzn
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
