fixed buttons in backend, TODO: fix MonitoringDevice, dockerize application

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ task buildFrontend{
 }
 
 task exportFrontendToBackend{
-    dependsOn "buildFrontend"
+    // dependsOn "buildFrontend"
     doLast{
         copy{
             from "gui_frontend_sprint3/build"
