--- a/MD_Sprint2/build2024.gradle
+++ b/MD_Sprint2/build2024.gradle
@@ -147,7 +147,7 @@ eclipse {
 
 application {
     //Define the main class for the application.
-    mainClassName    = 'it.unibo.ctx_monitoring_device.MainCtx_monitoring_deviceKt'
+    mainClassName    = 'it.unibo.ctxbasicrobot.MainCtxbasicrobotKt'
 }
  
  jar {
@@ -170,9 +170,9 @@ task dovesiamo {
 
 distributions {
     main {
-        distributionBaseName = 'monitoring_device'
+        distributionBaseName = 'basicrobot24'
         contents { 
-             from './monitoring_device.pl'
+             from './basicrobot24.pl'
              from './sysRules.pl'
              from './facadeConfig.json'
         }
@@ -183,7 +183,7 @@ task run0(type: JavaExec) {
     group = "Execution"
     description = "Run the main class with JavaExecTask"
     classpath = sourceSets.main.runtimeClasspath
-    main = 'it.unibo.ctx_monitoring_device.MainCtx_monitoring_deviceKt'
+    main = 'it.unibo.ctxbasicrobot.MainCtxbasicrobotKt'
 }
 
 /*
