--- a/WIS_Sprint3/dockerfile
+++ b/WIS_Sprint3/dockerfile
@@ -6,5 +6,6 @@ COPY ./*.pl ./
 COPY ./*.json ./
 COPY ./*.bin ./
 COPY ./*.txt ./
+COPY ./*.properties ./
 # RUN microdnf install findutils
 CMD ["bash", "wis_system"]
