--- a/WIS_Sprint3/wis_system.properties
+++ b/WIS_Sprint3/wis_system.properties
@@ -1,5 +1,5 @@
 # mqtt_broker_uri
-mqtt_broker_uri=ws://localhost:9001
+mqtt_broker_uri=ws://mqttBroker:9001
 
 # mock_scale
 mock_scale.roll_packets=2
