--- a/GUI_Backend_Sprint3/src/main/resources/facadeConfig.json
+++ b/GUI_Backend_Sprint3/src/main/resources/facadeConfig.json
@@ -1,1 +1,1 @@
-{"host":"localhost", "port":"8022", "context":"ctx_wis", "facade": "wis", "facadeport":"8085", "sysdescr":"wis_system" }
+{"host":"wis", "port":"8022", "context":"ctx_wis", "facade": "wis", "facadeport":"8085", "sysdescr":"wis_system" }
