--- a/WIS_Sprint1/.settings/org.eclipse.buildship.core.prefs
+++ b/WIS_Sprint1/.settings/org.eclipse.buildship.core.prefs
@@ -1,13 +1,13 @@
-arguments=--init-script /home/alessio/.config/Code/User/globalStorage/redhat.java/1.36.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/init/init.gradle --init-script /home/alessio/.config/Code/User/globalStorage/redhat.java/1.36.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/protobuf/init.gradle
+arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=..
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/mnt/hdd/alessio/Programs/sdkman/candidates/java/17-open
+java.home=
 jvm.arguments=
 offline.mode=false
-override.workspace.settings=true
-show.console.view=true
-show.executions.view=true
+override.workspace.settings=false
+show.console.view=false
+show.executions.view=false
