--- a/unibo.basicrobot24/basicrobotConfig.json
+++ b/unibo.basicrobot24/basicrobotConfig.json
@@ -1,2 +1,2 @@
-{"type":"virtual", "port":"8090", "iprobot":"localhost", "commtrace": "false"}
+{"type":"virtual", "port":"8090", "iprobot":"virtualEnv", "commtrace": "false"}
 
