--- a/unibo.basicrobot24/dockerfile
+++ b/unibo.basicrobot24/dockerfile
@@ -5,7 +5,7 @@
 FROM openjdk:12.0.2
 EXPOSE 8020
 ## ADD extracts the tar
-ADD ./build/distributions/basicrobot24-1.0.zip /
+ADD ./build/distributions/basicrobot24-1.0.tar /
 WORKDIR /basicrobot24-1.0/bin
 COPY ./*.pl ./
 COPY ./*.json ./
