--- a/WIS_Sprint3/docker-compose.yaml
+++ b/WIS_Sprint3/docker-compose.yaml
@@ -20,11 +20,13 @@ services:
       - 8090:8090
 
   basicRobot:
-    image: ghcr.io/b3nny01/basic-robot
+    image: docker.io/natbodocker/basicrobot24:1.0
     ports:
       - 8020:8020
+    volumes:
+      - ./basicrobotConfig.json:/basicrobot24-1.0/bin/basicrobotConfig.json
     depends_on:
-      - virtualEnv  
+      - virtualEnv   
   wis:
     image: ghcr.io/b3nny01/wis-3:latest
     ports:
