added test plan for sprint3

--- a/TEST_Sprint3/build2025Starting.gradle
+++ b/TEST_Sprint3/build2025Starting.gradle
@@ -154,9 +154,9 @@ task dovesiamo {
 
 distributions {
     main {
-        distributionBaseName = 'basicrobot24'
+        distributionBaseName = 'wis_tester'
         contents { 
-             from './basicrobot24.pl'
+             from './wis_tester.pl'
              from './sysRules.pl'
              from './facadeConfig.json'
         }
