--- a/WIS_Sprint3/build2024.gradle
+++ b/WIS_Sprint3/build2024.gradle
@@ -149,7 +149,7 @@ eclipse {
 
 application {
     //Define the main class for the application.
-    mainClassName    = 'it.unibo.ctx_wis.MainCtx_wisKt'
+    mainClassName    = 'it.unibo.ctxbasicrobot.MainCtxbasicrobotKt'
 }
  
  jar {
@@ -172,9 +172,9 @@ task dovesiamo {
 
 distributions {
     main {
-        distributionBaseName = 'wis_system'
+        distributionBaseName = 'basicrobot24'
         contents { 
-             from './wis_system.pl'
+             from './basicrobot24.pl'
              from './sysRules.pl'
              from './facadeConfig.json'
         }
@@ -185,7 +185,7 @@ task run0(type: JavaExec) {
     group = "Execution"
     description = "Run the main class with JavaExecTask"
     classpath = sourceSets.main.runtimeClasspath
-    main = 'it.unibo.ctx_wis.MainCtx_wisKt'
+    main = 'it.unibo.ctxbasicrobot.MainCtxbasicrobotKt'
 }
 
 /*
